[Ryuutama]: remove typos and double text

--- a/Ryuutama/Ryuutama.html
+++ b/Ryuutama/Ryuutama.html
@@ -573,7 +573,7 @@
                             <input type="radio" class="radioChoice radioChoice6" name="attr_initialMastery" value="6" title="Unarmed"/>
                             <span class="radioChoice radioChoice6">Unarmed</span>
                         </div>
-                    </div>a
+                    </div>
 
                     <span>
                         <input type='checkbox' class='showDiv' name='attr_showAttackTypeMastery' value='1'>
@@ -1130,7 +1130,7 @@
                     <label class='headerLabel checkLabel'>Common Checks</label>
                     <div class='sheet-2colrow'>
                         <div class='sheet-col'>
-                            <button class='skill-check-button' type='roll' value='&{template:skillCheck} {{season=@{currentSeason}}} {{name=Camp}} {{die1=[[1d@{currentDex}]]}} {{die2=[[1d@{currentInt}]]}} {{bonusesAndPenalties=[[@{campMod}[Skill Mod]+@{concentrationBonus}[Concentration]+@{classCampMod}[Class Bonus]+@{applyTerrain}[Terrain][Terrain]+@{applyWeather}[Weather][Weather]-@{overburdenPenalty}[Overburden][Overburden]]]}}' name='roll_campRoll'>Camp [DEX+INT]</button>
+                            <button class='skill-check-button' type='roll' value='&{template:skillCheck} {{season=@{currentSeason}}} {{name=Camp}} {{die1=[[1d@{currentDex}]]}} {{die2=[[1d@{currentInt}]]}} {{bonusesAndPenalties=[[@{campMod}[Skill Mod]+@{concentrationBonus}[Concentration]+@{classCampMod}[Class Bonus]+@{applyTerrain}[Terrain]+@{applyWeather}[Weather]-@{overburdenPenalty}[Overburden]]]}}' name='roll_campRoll'>Camp [DEX+INT]</button>
                             <input type='number' name='attr_campMod' value='0' class='journeyMod'/>
                         </div>
                         <div class='sheet-col'>
