[Ryuutama]: Remove hotlink to img, switch to github

--- a/Ryuutama/Ryuutama.html
+++ b/Ryuutama/Ryuutama.html
@@ -403,7 +403,7 @@
 
             <span class='characterDetails'>
                <div class='flex'>
-                    <img class="logo" src="https://cf.geekdo-images.com/opengraph/img/a-aup82Fu1aL6ZuzyN-1yWlo3dA=/fit-in/1200x630/pic1949043.png">
+                    <img class="logo" src="https://raw.githubusercontent.com/jlvgit/roll20-character-sheets/ryuutama-bug-fixes/Ryuutama/images/ryuutama_logo.png">
                     <div class='flex-column round-box'>
                         <div class="flex">
                             <div class='flex-column'>
