--- a/Shadowrun5thEdition/src/static.html
+++ b/Shadowrun5thEdition/src/static.html
@@ -13,7 +13,7 @@
 			<div class="row-long pd-age">
 				<h2 data-i18n="age">Age</h2><input type="text" name="attr_age" placeholder="age" title="@{age}" />
 				<h2 data-i18n="sex">Sex</h2><input type="text" name="attr_sex" placeholder="sex" title="@{sex}" />
-				<h2 data-i18n="height">Height</h2><input type="text" name="attr_height" placeholder="height" title="@{height}" >
+				<h2 data-i18n="height-u">Height</h2><input type="text" name="attr_height" placeholder="height" title="@{height}" >
 				<h2 data-i18n="weight">Weight</h2><input type="text" name="attr_weight" placeholder="weight" title="@{weight}" />
 			</div>
 			<div class="row-long pd-rep">
