--- a/Shadowrun5thEdition/src/hidden.html
+++ b/Shadowrun5thEdition/src/hidden.html
@@ -4,6 +4,7 @@
 
 <input type="hidden" name="attr_armor_name" value="select a Primary in Arms" />
 <input type="hidden" name="attr_soak" min="0" value="3" />
+<input type="hidden" name="attr_armor" min="0" value="3" />
 <input type="hidden" name="attr_acid_protection" min="0" value="3" />
 <input type="hidden" name="attr_cold_protection" min="0" value="3" />
 <input type="hidden" name="attr_electrical_protection" min="0" value="3" />
