--- a/Shadowrun5thEdition/src/magic.html
+++ b/Shadowrun5thEdition/src/magic.html
@@ -85,7 +85,7 @@
 						</div>
 						<div class="display">
 							<div class="display-row" title="Spell roll">
-								<button type="roll" name="spell" value="@{gm_toggle} &{template:rolls}{{header=@{name}}}{{base=^{magic}}}{{dice=[[((@{skill}+@{dicepool}+@{magic})+@{wound_toggle}+@{modifier_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=@{combat_type}?{Force|}}}{{drain=[[?{Force|}+(@{drain})]]}}{{mod=[[@{modifier_toggle}]]}}{{wound=[[@{wound_toggle}]]}}{{edge=[[@{edge_toggle}]]}}"><span name="attr_name"></span></button>
+								<button type="roll" name="spell" value="@{gm_toggle} &{template:rolls}{{header=@{name}}}{{base=^{magic}}}{{dice=[[((@{skill}+@{dicepool}+@{magic})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=@{combat_type}?{Force|}}}{{drain=[[?{Force|}+(@{drain})]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}"><span name="attr_name"></span></button>
 							</div>
 							<div class="display-row" title="Type"><span name="attr_type"></span></div>
 							<div class="display-row" title="Range"><span name="attr_range"></span></div>
@@ -163,7 +163,7 @@
 						</div>
 						<div class="display">
 							<input class="display-flag" type="checkbox" name="attr_display_flag" />
-							<div class="display-row" title="Spell roll"><button type="roll" name="alchemic" value="@{gm_toggle} &{template:rolls}{{header=@{name}}}{{base=^{magic}}}{{dice=[[((@{skill}+@{dicepool}+@{magic})+@{wound_toggle}+@{modifier_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=@{combat_type}?{Force|}}}{{drain=[[?{Force|}+(@{drain})]]}}{{mod=[[@{modifier_toggle}]]}}{{wound=[[@{wound_toggle}]]}}{{edge=[[@{edge_toggle}]]}}"><span name="attr_name"></span></button></div>
+							<div class="display-row" title="Spell roll"><button type="roll" name="alchemic" value="@{gm_toggle} &{template:rolls}{{header=@{name}}}{{base=^{magic}}}{{dice=[[((@{skill}+@{dicepool}+@{magic})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=@{combat_type}?{Force|}}}{{drain=[[?{Force|}+(@{drain})]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}"><span name="attr_name"></span></button></div>
 							<div class="display-row" title="Type"><span name="attr_type"></span></div>
 							<div class="display-row" title="Range"><span name="attr_range"></span></div>
 							<div class="display-row" title="Duration"><span name="attr_duration"></span></div>
@@ -201,7 +201,7 @@
 						</div>
 						<div class="display">
 							<input class="display-flag" type="checkbox" name="attr_display_flag"  />
-							<div class="display-row" class="Ritual roll"><button type="roll" name="ritual" value="@{gm_toggle} &{template:rolls}{{header=@{name}}}{{base=^{magic}}}{{dice=[[((@{skill}+@{dicepool}+@{magic})+@{wound_toggle}+@{modifier_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=Force ?{Force|}]]}}{{mod=[[@{modifier_toggle}]]}}{{wound=[[@{wound_toggle}]]}}{{edge=[[@{edge_toggle}]]}}"><span name="attr_name"></span></button></div>
+							<div class="display-row" class="Ritual roll"><button type="roll" name="ritual" value="@{gm_toggle} &{template:rolls}{{header=@{name}}}{{base=^{magic}}}{{dice=[[((@{skill}+@{dicepool}+@{magic})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=Force ?{Force|}]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}"><span name="attr_name"></span></button></div>
 							<input class="display-flag" type="checkbox" name="attr_display_flag" title="Display notes" /><span>i</span>
 							<div class="collapsable">
 								<div class="desc"><span name="attr_notes"></span></div>
