--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -21,14 +21,9 @@
 			<div class="content">
 				<h4>GURPS Version <input type="text" name="attr_announcement_version" readonly="readonly" value="0" title="GURPS Sheet Version" /></h4>
 				<ul>
-					<li>Combat Tab - Defense Roll. If parry, new notes for parrying heavier weapon.</li>
-					<li>Options Tab - added field to edit defensive parry notes.</li>
-					<li>Added Success/Fail notes for skills.</li>
-					<li>Added Success/Fail notes for spells.</li>
-					<li>Skills Tab - Expanding the skill box now shows the Row ID. The Row ID is useful for macros and for future linking to combat table.</li>
-					<li>Grimoire Tab - Expanding the spell box now shows the Row ID. The Row ID is useful for macros and for future linking to combat table.</li>
-					<li>Add notes for minimum damage amount.</li>
-					<li>Tooltips to view macro field names. Hover mouse over input box to see tooltip.</li>
+					<li>Combat Tab - Ranged Attacks. Added Malfunction field.</li>
+					<li>New Option - Use Malfunction. If checked, roll result will check for malfunction.</li>
+					<li>Character Sheet Default Options. Added Use Malfunction default option.</li>
 				</ul>
 				<label class="check"><input type="checkbox" name="attr_announcements_hide" value="1">&nbsp;<b><span>Hide until next update
 				</span></b></label>
@@ -3181,6 +3176,17 @@
 							to total shots fired. See page 373.
 						</span>
 					</div>
+					<div class="sheet-cell sheet-col9">
+						<div class="sheet-popup">Malf</div>
+						<span class="sheet-tooltip">
+							Malfunction chance.<br />
+							If the option Use Malfunction is checked, <br />
+							the roll results will check for weapon malfunction.<br />
+							Malfunction levels:<br />
+							TL3: 12, TL:4: 14, TL5: 16, TL6+: 17<bt />
+							For more info and malfunction table See B407.
+						</span>
+					</div>
 					<div class="sheet-cell sheet-col10">
 						<span style="background-color: #87CEFA">| skill |</span>
 					</div>
@@ -3238,11 +3244,14 @@
 						<div class="sheet-cell sheet-col9">
 							<input type="text" name="attr_recoil" title="Macro table name: repeating_ranged. Field name: recoil" />
 						</div>
+						<div class="sheet-cell sheet-col9">
+							<input type="text" name="attr_malfunction" title="Macro table name: repeating_ranged. Field name: malfunction" />
+						</div>
 						<div class="sheet-cell sheet-col10">
 							<input type="text" name="attr_skill" title="Macro table name: repeating_ranged. Field name: skill" />
 						</div>
 						<div class="sheet-cell sheet-col11">
-							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Ranged Attack}} {{activeDefense=[[0]]}} {{showHitLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{skill} + @{modifier}]]}} {{notes=@{notes}}} {{showNotes=[[1]]}} {{rof=@{rof}}} {{recoil=@{recoil}}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}}" name="roll_vsSL" />
+							<button type="roll" value="@{roll}&{template:skillRoll} {{type=Ranged Attack}} {{activeDefense=[[0]]}} {{showHitLabel=[[1]]}} {{characterName=@{character_name}}} {{skillName=@{name}}} {{rollResult=[[3d6]]}} {{effectiveSkill=[[@{skill} + @{modifier}]]}} {{notes=@{notes}}} {{showNotes=[[1]]}} {{rof=@{rof}}} {{recoil=@{recoil}}} {{useCriticalPlusTen=[[@{use_critical_plus_10}]]}} {{useMalfunction=[[@{use_malfunction}]]}} {{malfunction=[[@{malfunction}]]}}" name="roll_vsSL" />
 						</div>
 					</div> <!-- .sheet-row -->
 					<div class="sheet-row sheet-row-details2">
@@ -4093,6 +4102,16 @@
     <p>Pull Request: <span name="attr_latest_changes"></span></p>
 
     <ul>
+        <li>Combat Tab - Ranged Attacks. Added Malfunction field.</li>
+		<li>New Option - Use Malfunction. If checked, roll result will check for malfunction.</li>
+		<li>Character Sheet Default Options. Added Use Malfunction default option.</li>
+    </ul>
+    
+    <h4>Version: 1.6.6</h4>
+
+	<p>Pull Request: 10/22/2019</p>
+
+	<ul>
         <li>Combat Tab - Defense Roll. If parry, new notes for parrying heavier weapon. Will not display if wound modifier notes is turned off.</li>
         <li>Options tab - added field to edit defensive parry notes.</li>
         <li>Added Success/Fail notes for skills.</li>
@@ -4419,6 +4438,11 @@
     			    <input type="checkbox" name="attr_use_unspent_box" class="sheet-manual-unspent-box" value="1" />
     			    <span class="sheet-popup">Enter Unspent Points</span>
     			    <span class="sheet-tooltip">Check if you would like to manually track your unspent points</span>
+			    </div>
+			    <div>
+    			    <input type="checkbox" name="attr_use_malfunction" class="sheet-manual-unspent-box" value="1" />
+    			    <span class="sheet-popup">Use Malfunction</span>
+    			    <span class="sheet-tooltip">If checked, roll results will check for malfunction.</span>
 			    </div>
 			</div>
 			<div class="sheet-box">
@@ -5216,6 +5240,15 @@ If fail, attacker can opt to hit limb<br /></textarea>
                     </td>
                 </tr>
                 {{/effectiveSkill}}
+                {{#useMalfunction}}
+                {{#malfunction}}
+                {{#rollBetween() rollResult malfunction 18}}
+                <tr>
+                    <td colspan="2"><span style="color: red; font-weight:bold;">Malfunction!</span> Roll 3d6 and see table on B407 or use custom table.</td>
+                </tr>
+                {{/rollBetween() rollResult malfunction 18}}
+                {{/malfunction}}
+                {{/useMalfunction}}
                 {{#damageRoll}}
                 <tr>
                     <td class="label">Damage:</td>
@@ -5302,9 +5335,9 @@ If fail, attacker can opt to hit limb<br /></textarea>
 
 	var noop = function () {}; // do nothing.
 
-	var version = "1.6.7";
+	var version = "1.6.8";
 	
-	var latestChangesDate = "10/22/2019";
+	var latestChangesDate = "10/29/2019";
 
 	var modCascade = true;
 	
