--- a/Lotfp/Lotfp.html
+++ b/Lotfp/Lotfp.html
@@ -7,7 +7,7 @@
          <!-- Header Content -->
          <div class="sheet-info-name sheet-info-margin">
              <span>Name: </span>
-             <input type="text" class="sheet-bottom-line" name="attr_name">
+             <input type="text" class="sheet-bottom-line" name="attr_character_name">
          </div>
          <div class="sheet-info-row">
              <input type="text" class="sheet-info3" name="attr_class">
