--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -426,13 +426,13 @@
               </select>
             </div>
             <fieldset class="repeating_active">
-              <input class="settings-toggle" name="attr_flag" type="hidden" value="settings" title="@{repeating_active_${x}_flag"/>
               <input name="attr_display_rating" type="hidden"/>
               <input name="attr_display_specialization" type="hidden" value=""/>
               <input name="attr_display_limit" type="hidden" value="Physical"/>
               <input name="attr_display_attribute" type="hidden" value="Agility"/>
               <input name="attr_dicepool" type="hidden" value="0"/>
               <div class="row-long">
+                <input class="settings-toggle" name="attr_flag" type="hidden" value="settings" title="@{repeating_active_${x}_flag"/>
                 <div class="buttons">
                   <button name="skill" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{skill}}}{{base=@{display_attribute}}}{{dice=[[((@{dicepool}+@{attribute})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=@{display_limit}}}"><span name="attr_display"></span></button>
                   <button name="specialization" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{skill}}}{{base=@{display_attribute}}}{{dice=[[((@{dicepool}+@{attribute}+2)+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=Spec: @{specialization}, @{display_limit}}}"><span name="attr_display_specialization"></span></button>
@@ -460,9 +460,7 @@
                   <option data-i18n="sleaze" value="@{sleaze}">Sleaze</option>
                 </select>
                 <button class="pictos" name="act_skill" type="action">x</button>
-              </div>
-              <div class="settings-grid row-long">
-                <select class="skill-select" name="attr_skill" value="Close Combat Group" title="@{repeating_active_${x}_skill}"><option class="option-headers" disabled="true" data-i18n="combatskills">Combat Skills</option>
+                <select class="skill-select settings" name="attr_skill" value="Close Combat Group" title="@{repeating_active_${x}_skill}"><option class="option-headers" disabled="true" data-i18n="combatskills">Combat Skills</option>
 <option class="option-groups" value="Close Combat Group" data-i18n="closecombat">Close Combat Group</option>
 <option class="option-groups" value="Firearms Group" data-i18n="firearms">Firearms Group</option>
 <option value="Archery" data-i18n="archery">Archery</option>
@@ -559,16 +557,16 @@
 <option value="Pilot Watercraft" data-i18n="pilotwatercraft">Pilot Watercraft</option>
 <option value="Software" data-i18n="software">Software</option>
                 </select>
-                <label data-i18n-title="rating" title="rating">
+                <label class="settings" data-i18n-title="rating" title="rating">
                   <input name="attr_rating" min="0" placeholder="0" type="number" title="@{repeating_active_${x}_rating}"/>
                 </label>
-                <label data-i18n-title="ratingmodifier" title="Rating Modifier"><span data-i18n="ratingmodifier">Rating Modifier</span>
+                <label class="settings" data-i18n-title="ratingmodifier" title="Rating Modifier"><span data-i18n="ratingmodifier">Rating Modifier</span>
                   <input name="attr_rating_modifier" placeholder="0" type="number" title="@{repeating_active_${x}_rating_modifier}"/>
                 </label>
-                <label data-i18n-title="specializations" title="Specializations"> <span data-i18n="specializations">Specializations</span>
+                <label class="settings" data-i18n-title="specializations" title="Specializations"> <span data-i18n="specializations">Specializations</span>
                   <input name="attr_specialization}" placeholder="Specalizations" type="text" title="@{repeating_active_${x}_specialization}"/>
                 </label>
-                <label data-i18n-title="notes" title="notes"><span data-i18n="notes">Notes</span>
+                <label class="settings" data-i18n-title="notes" title="notes"><span data-i18n="notes">Notes</span>
                   <textarea name="attr_notes" value="" placeholder="Notes" title="@{repeating_active_${x}_notes}"></textarea>
                 </label>
               </div>
@@ -576,13 +574,13 @@
           </div>
           <div class="skills-know">
             <fieldset class="repeating_knowledge">
-              <input class="settings-toggle" name="attr_flag" type="hidden" value="settings" title="@{repeating_know_${x}_flag"/>
               <input name="attr_display_rating" type="hidden"/>
               <input name="attr_display_specialization" type="hidden" value=""/>
               <input name="attr_display_limit" type="hidden" value="Mental"/>
               <input name="attr_display_attribute" type="hidden" value="Logic"/>
               <input name="attr_dicepool" type="hidden" value="0"/>
               <div class="row-long">
+                <input class="settings-toggle" name="attr_flag" type="hidden" value="settings" title="@{repeating_know_${x}_flag"/>
                 <div class="buttons">
                   <button name="skill" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{skill}}}{{base=@{display_attribute}}}{{dice=[[((@{dicepool}+@{attribute})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=@{display_limit}}}"><span name="attr_display"></span></button>
                   <button name="specialization" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{skill}}}{{base=@{display_attribute}}}{{dice=[[((@{dicepool}+@{attribute}+2)+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=Spec: @{specialization}, @{display_limit}}}"><span name="attr_display_specialization"></span></button>
@@ -610,21 +608,19 @@
                   <option data-i18n="sleaze" value="@{sleaze}">Sleaze</option>
                 </select>
                 <button class="pictos" name="act_skill" type="action">x</button>
-              </div>
-              <div class="settings-grid row-long">
-                <label data-i18n-title="skill" title="skill">
+                <label class="settings" data-i18n-title="skill" title="skill">
                   <input name="attr_skill" placeholder="knowledge" type="text" title="@{repeating_know_${x}_skill}"/>
                 </label>
-                <label data-i18n-title="rating" title="rating">
+                <label class="settings" data-i18n-title="rating" title="rating">
                   <input name="attr_rating" min="0" placeholder="0" type="number" title="@{repeating_know_${x}_rating}"/>
                 </label>
-                <label data-i18n-title="ratingmodifier" title="Rating Modifier"><span data-i18n="ratingmodifier">Rating Modifier</span>
+                <label class="settings" data-i18n-title="ratingmodifier" title="Rating Modifier"><span data-i18n="ratingmodifier">Rating Modifier</span>
                   <input name="attr_rating_modifier" placeholder="0" type="number" title="@{repeating_know_${x}_rating_modifier}"/>
                 </label>
-                <label data-i18n-title="specializations" title="Specializations"> <span data-i18n="specializations">Specializations</span>
+                <label class="settings" data-i18n-title="specializations" title="Specializations"> <span data-i18n="specializations">Specializations</span>
                   <input name="attr_specialization}" placeholder="Specalizations" type="text" title="@{repeating_know_${x}_specialization}"/>
                 </label>
-                <label data-i18n-title="notes" title="notes"><span data-i18n="notes">Notes</span>
+                <label class="settings" data-i18n-title="notes" title="notes"><span data-i18n="notes">Notes</span>
                   <textarea name="attr_notes" value="" placeholder="Notes" title="@{repeating_know_${x}_notes}"></textarea>
                 </label>
               </div>
@@ -632,13 +628,13 @@
           </div>
           <div class="skills-lang">
             <fieldset class="repeating_language">
-              <input class="settings-toggle" name="attr_flag" type="hidden" value="settings" title="@{repeating_lang_${x}_flag"/>
               <input name="attr_display_rating" type="hidden"/>
               <input name="attr_display_specialization" type="hidden" value=""/>
               <input name="attr_display_limit" type="hidden" value="Social"/>
               <input name="attr_display_attribute" type="hidden" value="Charisma"/>
               <input name="attr_dicepool" type="hidden" value="0"/>
               <div class="row-long">
+                <input class="settings-toggle" name="attr_flag" type="hidden" value="settings" title="@{repeating_lang_${x}_flag"/>
                 <div class="buttons">
                   <button name="skill" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{skill}}}{{base=@{display_attribute}}}{{dice=[[((@{dicepool}+@{attribute})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=@{display_limit}}}"><span name="attr_display"></span></button>
                   <button name="specialization" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{skill}}}{{base=@{display_attribute}}}{{dice=[[((@{dicepool}+@{attribute}+2)+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=Spec: @{specialization}, @{display_limit}}}"><span name="attr_display_specialization"></span></button>
@@ -666,21 +662,19 @@
                   <option data-i18n="sleaze" value="@{sleaze}">Sleaze</option>
                 </select>
                 <button class="pictos" name="act_skill" type="action">x</button>
-              </div>
-              <div class="settings-grid row-long">
-                <label data-i18n-title="skill" title="skill">
+                <label class="settings" data-i18n-title="skill" title="skill">
                   <input name="attr_skill" placeholder="language" type="text" title="@{repeating_lang_${x}_skill}"/>
                 </label>
-                <label data-i18n-title="rating" title="rating">
+                <label class="settings" data-i18n-title="rating" title="rating">
                   <input name="attr_rating" min="0" placeholder="0" type="number" title="@{repeating_lang_${x}_rating}"/>
                 </label>
-                <label data-i18n-title="ratingmodifier" title="Rating Modifier"><span data-i18n="ratingmodifier">Rating Modifier</span>
+                <label class="settings" data-i18n-title="ratingmodifier" title="Rating Modifier"><span data-i18n="ratingmodifier">Rating Modifier</span>
                   <input name="attr_rating_modifier" placeholder="0" type="number" title="@{repeating_lang_${x}_rating_modifier}"/>
                 </label>
-                <label data-i18n-title="specializations" title="Specializations"> <span data-i18n="specializations">Specializations</span>
+                <label class="settings" data-i18n-title="specializations" title="Specializations"> <span data-i18n="specializations">Specializations</span>
                   <input name="attr_specialization}" placeholder="Specalizations" type="text" title="@{repeating_lang_${x}_specialization}"/>
                 </label>
-                <label data-i18n-title="notes" title="notes"><span data-i18n="notes">Notes</span>
+                <label class="settings" data-i18n-title="notes" title="notes"><span data-i18n="notes">Notes</span>
                   <textarea name="attr_notes" value="" placeholder="Notes" title="@{repeating_lang_${x}_notes}"></textarea>
                 </label>
               </div>
@@ -847,7 +841,7 @@
 						<input type="hidden" class="settings-toggle" name="attr_flag" value="settings" />
 						<button class="pictos" name="quality_chat" type="roll" value="@{gm_toggle} &{template:rolls}{{header=@{quality}}}{{desc=@{notes}}}">w</button>
 						<button class="pictos settings-button" name="act_quality" type="action">x</button>
-						<div class="settings"style="margin-left: 0px;">
+						<div class="settings">
 							<div>
 								<input type="text" name="attr_quality" placeholder="Quality name" title="Quality name" />
 								<select name="attr_type" title="Positive or Negative quality">
@@ -1231,7 +1225,7 @@
 								</select>
 								<input type="number" name="attr_drain" value="" placeholder="-1" title="Drain code" />
 								<div class="settings-row">
-									<label data-i18n="spellcategory">Spell Category</label>
+									<label data-i18n="category">Spell Category</label>
 									<select name="attr_category" title="Category">
 										<option class="option" value="Combat" selected="selected" data-i18n="combat">Combat</option>
 										<option class="option" value="Detection" data-i18n="detection">Detection</option>
@@ -1311,7 +1305,7 @@
 								</select>
 								<input type="number" name="attr_drain" value="" placeholder="-1" title="Drain code" />
 								<div class="settings-row">
-									<label data-i18n="spellcategory">Spell Category</label>
+									<label data-i18n="category">Spell Category</label>
 									<select name="attr_category" title="Category">
 										<option class="option" value="Combat" selected="selected" data-i18n="combat">Combat</option>
 										<option class="option" value="Detection" data-i18n="detection">Detection</option>
