--- a/Shadowrun5thEdition/src/core.html
+++ b/Shadowrun5thEdition/src/core.html
@@ -156,7 +156,7 @@
 						<input type="hidden" class="settings-toggle" name="attr_flag" value="settings" />
 						<button class="pictos" name="quality_chat" type="roll" value="@{gm_toggle} &{template:rolls}{{header=@{quality}}}{{desc=@{notes}}}">w</button>
 						<button class="pictos settings-button" name="act_quality" type="action">x</button>
-						<div class="settings"style="margin-left: 0px;">
+						<div class="settings">
 							<div>
 								<input type="text" name="attr_quality" placeholder="Quality name" title="Quality name" />
 								<select name="attr_type" title="Positive or Negative quality">
