--- a/Shadowrun5thEdition/src/magic.html
+++ b/Shadowrun5thEdition/src/magic.html
@@ -46,7 +46,7 @@
 								</select>
 								<input type="number" name="attr_drain" value="" placeholder="-1" title="Drain code" />
 								<div class="settings-row">
-									<label data-i18n="spellcategory">Spell Category</label>
+									<label data-i18n="category">Spell Category</label>
 									<select name="attr_category" title="Category">
 										<option class="option" value="Combat" selected="selected" data-i18n="combat">Combat</option>
 										<option class="option" value="Detection" data-i18n="detection">Detection</option>
@@ -126,7 +126,7 @@
 								</select>
 								<input type="number" name="attr_drain" value="" placeholder="-1" title="Drain code" />
 								<div class="settings-row">
-									<label data-i18n="spellcategory">Spell Category</label>
+									<label data-i18n="category">Spell Category</label>
 									<select name="attr_category" title="Category">
 										<option class="option" value="Combat" selected="selected" data-i18n="combat">Combat</option>
 										<option class="option" value="Detection" data-i18n="detection">Detection</option>
